test/official_tests/for/var_in_body.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
for (;;) var foo;
